<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Feedback"
    android:theme="@style/Theme.CardBidders2021">
        <TextView
            android:id="@+id/txt_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_title_feed"
            android:textAlignment="center"
            android:textSize="40dp" />
    <TextView android:id="@+id/txt_feedback_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/txt_desc_feed"/>
    <TableRow android:layout_gravity="center">
        <TextView android:id="@+id/txt_radio_head"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/txt_radio_head"/>
    </TableRow>
        <RadioGroup
            android:id="@+id/rad_impression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_option_one"
                android:id="@+id/rad_one"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_option_two"
                android:id="@+id/rad_two"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_option_three"
                android:id="@+id/rad_three"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_option_four"
                android:id="@+id/rad_four"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rad_option_five"
                android:id="@+id/rad_five"/>
        </RadioGroup>
    <TableRow>
        <TextView android:id="@+id/txt_seek_head"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/txt_seek_head"/>
    </TableRow>
    <TextView
        android:id="@+id/rating_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25dp"
        android:layout_gravity="center"/>
    <SeekBar
        android:id="@+id/ranking_seek"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:min="0"
        android:progress="1"/>
    <TableRow>
        <TextView android:id="@+id/txt_thank"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/txt_thanks"/>
    </TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:fontFamily="serif"/>

    <EditText
        android:id="@+id/enterName"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/your_name"
        android:inputType="text"
        android:fontFamily="serif"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:fontFamily="serif"/>

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/your_email"
        android:inputType="text"
        android:fontFamily="serif"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_date_time"
        android:text="@string/btn_date_time"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:text="@string/btn_submit"/>
</TableLayout>
</ScrollView>