<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.CardBidders2021"
    tools:context=".Auctions">
    <TableRow
        android:layout_gravity="center"
        android:layout_marginStart="5dp">
        <Button
            android:layout_width="400dp"
            android:id="@+id/btn_about_magic"
            android:layout_height="wrap_content"
            android:text="@string/btn_magic">

        </Button>
    </TableRow>
    <TableRow
        android:layout_gravity="center"
        android:layout_marginStart="5dp">
        <Button
            android:layout_width="400dp"
            android:id="@+id/btn_about_sports"
            android:layout_height="wrap_content"
            android:text="@string/btn_sports">

        </Button>
    </TableRow>
    <TableRow
        android:layout_gravity="center"
        android:layout_marginStart="5dp">
        <Button
            android:layout_width="400dp"
            android:id="@+id/btn_about_comics"
            android:layout_height="wrap_content"
            android:text="@string/btn_comics">

        </Button>
    </TableRow>
    <TableRow
        android:layout_gravity="center"
        android:layout_marginStart="5dp">
        <Button
            android:layout_width="400dp"
            android:id="@+id/btn_about_pokemon"
            android:layout_height="wrap_content"
            android:text="@string/btn_pokemon">

        </Button>
    </TableRow>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxHeight="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></FrameLayout>

</TableLayout>
</ScrollView>